; ModuleID = '/home/carl/AnghaBench/linux/drivers/vfio/extr_vfio_iommu_type1.c_vfio_iommu_type1_register_notifier.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/vfio/extr_vfio_iommu_type1.c_vfio_iommu_type1_register_notifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notifier_block = type { i32 }
%struct.vfio_iommu = type { i32 }

@VFIO_IOMMU_NOTIFY_DMA_UNMAP = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64*, %struct.notifier_block*)* @vfio_iommu_type1_register_notifier to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vfio_iommu_type1_register_notifier(i8* %0, i64* %1, %struct.notifier_block* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca %struct.notifier_block*, align 8
  %8 = alloca %struct.vfio_iommu*, align 8
  store i8* %0, i8** %5, align 8
  store i64* %1, i64** %6, align 8
  store %struct.notifier_block* %2, %struct.notifier_block** %7, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.vfio_iommu*
  store %struct.vfio_iommu* %10, %struct.vfio_iommu** %8, align 8
  %11 = load i64, i64* @VFIO_IOMMU_NOTIFY_DMA_UNMAP, align 8
  %12 = xor i64 %11, -1
  %13 = load i64*, i64** %6, align 8
  %14 = load i64, i64* %13, align 8
  %15 = and i64 %14, %12
  store i64 %15, i64* %13, align 8
  %16 = load i64*, i64** %6, align 8
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %4, align 4
  br label %27

22:                                               ; preds = %3
  %23 = load %struct.vfio_iommu*, %struct.vfio_iommu** %8, align 8
  %24 = getelementptr inbounds %struct.vfio_iommu, %struct.vfio_iommu* %23, i32 0, i32 0
  %25 = load %struct.notifier_block*, %struct.notifier_block** %7, align 8
  %26 = call i32 @blocking_notifier_chain_register(i32* %24, %struct.notifier_block* %25)
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %22, %19
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @blocking_notifier_chain_register(i32*, %struct.notifier_block*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
